--- a/app/scss/_responsive.scss
+++ b/app/scss/_responsive.scss
@@ -93,6 +93,9 @@
     .main-content-wrapper {
         background-image: url(../img/coffee-bg-md.jpg);
     }
+    #content-wrapper {
+       justify-content: center;
+    }
     .list {
         font-size: 24px;
     }
